[package]
name = "amqp-lapin-helper"
description = "rust lapin helper"
license = "MIT"
version = "0.7.0"
authors = ["Jonathan Dizdarevic <dizzda@gmail.com>"]
edition = "2021"
repository = "https://github.com/dizda/amqp-lapin-helper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2.3.1"
tokio-executor-trait = "2.1.1"
tokio-reactor-trait = "1.1.0"
serde = { version = "1.0.195", features = ["derive"] }
async-trait = "0.1.77"
tokio = { version = "1.35.1", features = ["sync", "macros"] }
once_cell = "1.19.0"
futures-lite = "1.13.0"
thiserror = "1.0.56"
tracing = "0.1.40"
chrono = "0.4.31"
uuid = { version = "0.8.2", features = ["serde"] }
bincode = "1.3.3"
prometheus = { version = "0.13.3", features = [] }
