[package]
name = "amqp-lapin-helper"
description = "rust lapin helper"
license = "MIT"
version = "0.7.3"
authors = ["Jonathan Dizdarevic <dizzda@gmail.com>"]
edition = "2021"
rust-version = "1.80.0"
repository = "https://github.com/dizda/amqp-lapin-helper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2.5.1"
tokio-executor-trait = "2.1.3"
tokio-reactor-trait = "1.1.0"
serde = { version = "1.0.219", features = ["derive"] }
async-trait = "0.1.88"
tokio = { version = "1.44.1", features = ["sync", "macros"] }
futures-lite = "2.6.0"
thiserror = "1.0.69"
tracing = "0.1.41"
chrono = "0.4.40"
uuid = { version = "1.16.0", features = ["serde"] }
bincode = "1.3.3"
prometheus = { version = "0.13.4", features = [] }
